fix-bags-swagger
